kube-manifests/ingresses/trip-viewer-api-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: trip-viewer-api-ingress
  namespace: api
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /api/poi
            pathType: Prefix
            backend:
              service:
                name: poi-service
                port:
                  number: 8080
          - path: /api/trips
            pathType: Prefix
            backend:
              service:
                name: tripsapi-service
                port:
                  number: 80
          - path: /api/user
            pathType: Prefix
            backend:
              service:
                name: userprofile-service
                port:
                  number: 80
          - path: /api/user-java
            pathType: Prefix
            backend:
              service:
                name: userapi-service
                port:
                  number: 80
