kube-manifests/ingresses/trip-viewer-web-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: trip-viewer-web-ingress
  namespace: web
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: tripviewer-service
                port:
                  number: 80
